Archive2/1d/4f7a88e22e2b8d/output
main.cpp:12:26: error: type 'shy::__lambda0' with no linkage used to declare function 'auto shy::__lambda0::operator()() const' with linkage [-fpermissive]
 const shy shy::object = []{
                          ^
main.cpp:16:1: warning: lambda expressions only available with -std=c++11 or -std=gnu++11 [enabled by default]
 }();
 ^
main.cpp: In function 'shy init()':
main.cpp:4:9: error: 'int shy::dont_touch' is private
     int dont_touch;
         ^
main.cpp:21:9: error: within this context
     obj.dont_touch = 42;
         ^
